# neural-network-01

./: .gitignore  CMakeLists.txt  README.md
algorithms/k-nearest-neighbour/: CMakeLists.txt
algorithms/k-nearest-neighbour/includes/: k_nearest_neighbour.hpp
algorithms/k-nearest-neighbour/sources/: k_nearest_neighbour.cpp  main.cpp
data_handler/: CMakeLists.txt
data_handler/includes/: data_handler.hpp
data_handler/sources/: data_handler.cpp  main.cpp
